--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ repositories {
 dependencies {
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.12'
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.12'
+    compile group: 'org.jboss.resteasy:resteasy-validator-provider-11:3.0.12.Final'
+    compile group: 'org.jboss.resteasy:resteasy-jackson2-provider:3.0.12.Final'
+    compile group: 'org.jboss.resteasy:resteasy-client:3.0.12.Final'
 
     //common dependencies
     //common "org.slf4j:slf4j-api:1.7.12"
