--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile 'org.jboss.resteasy:resteasy-jackson2-provider:3.0.12.Final'
     compile 'org.jboss.resteasy:resteasy-client:3.0.12.Final'
     compile 'javax.inject:javax.inject:1'
+    compile 'junit:junit:4.12'
 
 }
 
