smaller war, but build error in intellij

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'war'
 apply plugin: 'java'
 
 configurations {
-
+    provided
 }
 
 repositories {
@@ -10,14 +10,18 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main { compileClasspath += configurations.provided }
+}
+
 dependencies {
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.12'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.12'
-    compile 'org.jboss.resteasy:resteasy-validator-provider-11:3.0.12.Final'
-    compile 'org.jboss.resteasy:resteasy-jackson2-provider:3.0.12.Final'
-    compile 'org.jboss.resteasy:resteasy-client:3.0.12.Final'
-    compile 'javax.inject:javax.inject:1'
+    provided 'org.jboss.resteasy:resteasy-validator-provider-11:3.0.12.Final'
+    provided 'org.jboss.resteasy:resteasy-jackson2-provider:3.0.12.Final'
+    provided 'org.jboss.resteasy:resteasy-client:3.0.12.Final'
+    provided 'javax.inject:javax.inject:1'
     compile 'junit:junit:4.12'
 
 }
