--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     compile 'org.jboss.resteasy:resteasy-jackson2-provider:3.0.12.Final'
     compile 'org.jboss.resteasy:resteasy-client:3.0.12.Final'
     compile 'javax.inject:javax.inject:1'
+    compile 'javax:javaee-api:7.0'
+    compile 'javax.enterprise:cdi-api:1.2'
     compile 'junit:junit:4.12'
 
 }
